@@ -48,10 +48,10 @@
 #define MKPATH(dir) g_build_path(G_DIR_SEPARATOR_S, dir, "plugins", "geanylua", SUPPORT_LIB, NULL);
 
 PLUGIN_EXPORT
-VERSION_CHECK(MY_GEANY_API_VER)
+PLUGIN_VERSION_CHECK(MY_GEANY_API_VER)
 
 PLUGIN_EXPORT
-PLUGIN_INFO(PLUGIN_NAME, PLUGIN_DESC, PLUGIN_VER, PLUGIN_AUTHOR)
+PLUGIN_SET_INFO(PLUGIN_NAME, PLUGIN_DESC, PLUGIN_VER, PLUGIN_AUTHOR)
 
 PLUGIN_EXPORT
 GeanyFunctions *geany_functions;
